wikipedia working from inside too