@@ -1,6 +1,8 @@
 import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.util.Arrays;
 
 /**
  * Created by manjeet on 6/6/17.
@@ -9,12 +11,16 @@ public class test1 {
     public static void main(String args[]) throws IOException{
 
         try {
-//            String command = "python wikipedia.py";
-            String command = "python mapWiki.py debugger";
-            Process proc = Runtime.getRuntime().exec(command);
-
+//            String command = "echo 'hey'";
+            String command = "mapWiki.py";
+            ProcessBuilder pb = new ProcessBuilder(Arrays.asList("/home/manjeet/anaconda2/bin/python2.7", command, "debugger"));
+//            Process proc = Runtime.getRuntime().exec(command);
+            Process proc = pb.start();
 
             // Read the output
+//            InputStream is = proc.getInputStream();
+//            InputStreamReader isr = new InputStreamReader(is);
+//            BufferedReader reader = new BufferedReader(isr);
 
             BufferedReader reader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
 
